billy-port/src/App.css
/* font-family: 'Smythe', sans-serif;
font-family: 'Gayathri', sans-serif;
font-family: 'Lexend Tera', sans-serif;
font-family: 'Metrophobic', sans-serif;
font-family: 'Montserrat', sans-serif;
font-family: 'MuseoModerno', sans-serif;
font-family: 'Playfair Display', serif;
font-family: 'Poppins', sans-serif;
font-family: 'Roboto Flex', sans-serif;
font-family: 'Roboto Mono', monospace;
font-family: 'Source Code Pro', monospace;
font-family: 'Space Mono', monospace;
font-family: 'IBM Plex', sans;
font-family: 'IBM Plex', monospace;
font-family: 'Space Grotesk', sans-serif;
font-family: 'Syne', sans-serif; 
font-family: 'Inknut Antiqua', serif;
font-family: 'Syne', sans-serif; 
font-family: 'Cormorant', serif;
font-famiily: 'Manrope', sans-serif; */
  



@font-face {
  font-family: 'Gerbil';
  src: url('/assets/Gerbil.ttf') format('truetype');
}

@font-face {
  font-family: 'Man';
  src: url('/assets/Man.ttf') format('truetype');
}
@font-face {
  font-family: 'Monument';
  src: url('/assets/MonumentExtendedRegular.otf') format('opentype');
}
@font-face {
  font-family: 'Woodland';
  src: url('/assets/WoodlandLight.otf') format('opentype');
}
@font-face {
  font-family: 'Woodland-Bold';
  src: url('/assets/WoodlandBold.otf') format('opentype');
}
@font-face {
  font-family: 'Kayak Sans Regular';
  src: url('/assets/Kayak Sans Regular.otf') format('opentype');
}
@font-face {
  font-family: 'Face';
  src: url('/assets/NeutralFace.otf') format('opentype');
}
@font-face {
  font-family: 'March';
  src: url('/assets/March.otf') format('opentype');
}




html,
body {
  margin: 0;
  padding: 0;
  background-color: var(--background);
  background-image: var(--background-image);
  color: var(--primary-text-color);

  @media screen and (max-width:1200px) {
    margin: 0;
    padding: 0;
    max-height: 100vh;
    min-height: 100vh;
    height: auto;
  }

}

.App {
  background-color: var(--background);
  color: var(--primary-text-color);
  transition: background-color 0.5s ease-in-out;

  @media screen and (max-width: 1200px) {
    height: auto;
    
  }
}

.App {
  filter: contrast(100%) brightness(100%);
  background-image: var(--background-image);
}

.App [data-theme='dark'] {
  filter: contrast(100%) brightness(100%);
  background-image: var(--background-image);
}



.home-container {
  display: flex;
  min-width: 100%;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  height: auto;

  @media screen and (max-width: 1200px) {
    display: flex;
    justify-content: start;
    flex-direction: column;
    align-items: start;
    margin-top: 20%;
  }
}

.home-content {
  padding-top: 15vh;
  width: 30%;
  max-width: 50vw;
  min-width: 120px;

  @media screen and (max-width: 1200px) {
    display: flex;
    justify-content: center;
    flex-direction: column;
    flex-wrap: wrap;
    padding-top: 12px;
    padding-left: 2.5vh;
    margin: 0;
    min-width: 75%;
  }
}

h2 {
  font-family: 'March', sans-serif;
  font-weight: 100;
  /* letter-spacing: 4px; */
  margin: 0px;
  font-size: 8vh;
}

p {
  font-family: 'Kayak Sans Regular', sans-serif;
  font-weight: 400;
  margin-bottom: 1px;
  font-size: 1.6vh;
}

@media screen and (max-width: 1200px) {
  h2 {
    font-size: 3vh;
  }

  p {
    font-size: 1.6vh;
  }
}

.home-p {
    font-family: 'Syne', sans-serif;
    font-family: 'Kayak Sans Regular', sans-serif;
      font-family: 'Face', sans-serif;
    font-weight: 400;
    margin-bottom: 1px;
    font-size: 2vh;
  
  @media screen and (max-width: 1200px) {
    h2 {
      font-size: 3vh;
    }
  
    p {
      font-size: 1.6vh;
    }
  }
}

.main-link {
  animation: animate 3s linear;
}

@keyframes animate {
  0% {
    opacity: 0;
  }

  100% {
    animation-play-state: paused;
    opacity: 1;
  }
}

a.link {
  font-family: 'Syne', sans-serif; 
  font-family: 'March', sans-serif;
  letter-spacing: 0.5rem;
  color: var(--primary-text-color);
  text-align: left;
  font-size: 24vh;
  line-height: .95em;
  text-decoration: none;
  display: block;
  position: relative;
  animation: letterspacing 1s alternate cubic-bezier(.2, 0, 0, 1);
  -webkit-animation: letterspacing 1s alternate cubic-bezier(.2, 0, 0, 1);
  left: 50%;
  top: 50%;
  transform: translate3d(-50%, -50%, 0);
  -webkit-transform: ranslate3d(-50%, -50%, 0);


  @media screen and (max-width: 1200px) {
    font-size: 10vh;
  }
}

@keyframes letterspacing {
  0% {
    letter-spacing: -5rem;
    filter: blur(0.5rem);
  }

  50% {
    filter: blur(0.5rem);
  }
}

.link:hover {
  font-style: italic;
}

.nav-container {
  margin-left: 60px;
  margin-right: 40px;

  @media screen and (max-width: 1200px) {
    margin: 0;
    display: flex;
    justify-content: start;
    padding-top: 5vh;
    padding-left: 2.5vh
  }
}

.navbar {
  display: flex;
  justify-content: flex-end;
  flex-direction: column;
  align-items: justify;
}

.sidebar {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 6vh;
  padding-top: 20px;
  padding-left: 30px;

  @media screen and (max-width: 1200px) {
    display: flex;
    flex-direction: row;
    width: auto;
    padding-top: 20px;
    padding-left: 12px;
  }
}

a.side-link {
  transform: rotate(270deg);
  padding: 40px 0px 70px 0px;
  text-decoration: none;
  color: var(--primary-text-color);
  font-family: 'Face', sans-serif;
  font-weight: 400;
  font-size: 1vw;

  @media screen and (max-width: 1200px) {
    transform: none;
    padding: 10px 20px;
    display: flex;
    justify-content: center;
    flex-direction: row;
    margin: 0 10px;
    font-size: 3.5vw;
  }
}

.side-link:hover {
  text-decoration: line-through;
  text-decoration-thickness: 2px;
}

.nav-link {
  text-decoration: none;
  transform: rotate(270deg);
  padding: 60px 0px 90px 60px;
}

.prof-span {
  font-family: 'Woodland-Bold', sans-serif;
  font-style: italic;
  font-weight: 400;
  font-size: 2.2vh;

  @media screen and (max-width: 1200px) {
    font-size: 1.4vh;
  }
}

